plug Hive classloader leak